# ptc-material

ptc/Git branching Command - self learning/: README.md
ptc/Object_Storge_Task/: README.md  client.js  createRandomObj.js  main.js  package.json
ptc/asset_catalog/.github/workflows/: workflow-test.yaml
ptc/asset_catalog/asset_catalog_task/: Dockerfile  README.md  requirements.txt
ptc/asset_catalog/asset_catalog_task/src/: main.py  server.py
ptc/asset_catalog/asset_catalog_task/test/: test_main.py  test_server.py
ptc/calculator/.github/workflows/: TestsCalculator.yml  calculator_application_workflow.yaml  test-workflow.yaml  workflow.yml
ptc/calculator/Calculator-Task/: README.md
ptc/calculator/Calculator-Task/client/: README.md
ptc/calculator/Calculator-Task/server/: .gitignore  README.md  pom.xml
ptc/calculator/Calculator-Task/server/src/main/java/com/mycompany/app/: Add.java  Calculator.java  Controller.java  Division.java  Helper.java  Multiplication.java  Operator.java  RestServiceApplication.java  Subtraction.java
ptc/calculator/Calculator-Task/server/src/test/java/com/mycompany/app/: AddTest.java  CalculatorTest.java  DivisionTest.java  (+3 more)
ptc/send_to_skyline-9900/: .env  .env.sample  README.md  main.py  pyproject.toml  requirements.txt
ptc/send_to_skyline-9900/custom_packages/: azure_operations-0.0.2-py3-none-any.whl
ptc/send_to_skyline-9900/src/: edit_message.py  send_message.py  send_to_skyline.py
ptc/send_to_skyline-9900/src/utils/: connect_to_Azure.py  const.py  rabbitmq_actions.py
ptc/slack-api/.github/workflows/: slack.yaml
